# mypy-bug-reproducer

./: LICENCE  README.md  pyproject.toml  reproducer-main.py
some_module/: reproducer_import.py
